# OV_vlog_clip

./: .gitignore  DEVELOPMENT_STATUS.md  README.md  build_e2e_exe.cmd  build_gui_exe.cmd  e2e_entry.py  git_save_progress.cmd  gui_entry.py  ov_video_editing_e2e.spec  ov_video_editing_gui.spec  package_gui_release.cmd  pyproject.toml  requirements-build.txt  requirements.txt  run.py
ov_video_editing_skills/: analyze_video.py  bootstrap.py  cli.py  compose_video.py  creative_brief.py  e2e.py  generate_storyboard.py  prepare_workspace.py  runtime.py  setup_ov_model.py  setup_resources.py
ov_video_editing_skills/gui/: __init__.py  default_config.json  launcher.py  models.py  qt_app.py  services.py  settings.py
resource/bgm/: README.md
scripts/: release_self_check.cmd  test_analyze.cmd  test_analyze.py  test_compose.cmd  test_compose.py  test_e2e.cmd  test_e2e.py  test_prepare.cmd  test_prepare.py  test_storyboard.cmd  test_storyboard.py
tests/: test_command_scripts.py  test_creative_flow.py  test_gui_services.py
