[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ov-video-editing-skills"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Local pure-Python video editing workflow with prepare/analyze/storyboard/compose and portable E2E entrypoints."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "kundaxu" }
]

[project.urls]
Homepage = "https://github.com/18582088138/OV_FunClip"

[project.scripts]
ov-video-editing-skills = "ov_video_editing_skills.cli:main"
ov-video-editing-e2e = "ov_video_editing_skills.e2e:main"
ov-video-editing-gui = "ov_video_editing_skills.gui.launcher:main"

[tool.setuptools.dynamic]
version = { attr = "ov_video_editing_skills.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
build = { file = ["requirements-build.txt"] }
gui = { file = ["requirements-gui.txt"] }

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"ov_video_editing_skills.gui" = ["default_config.json"]

[tool.setuptools.packages.find]
include = ["ov_video_editing_skills*"]